--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 
         <p>Wow body paragraphs... This website is much better now</p>
 
+        <p>yes it is - well done padawan</p>
+
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     </body>
 </html>
