--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 
         <p>yes it is - well done padawan</p>
 
+        <p>this too edited by rmk</p>
+
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     </body>
 </html>
